force-app/main/default/objects/Account/fields/RewardPoints__c.field-meta.xml
<CustomField>
    <fullName>RewardPoints__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Reward Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>