force-app/main/default/objects/Account/fields/SupplierProduct__c.field-meta.xml
<CustomField>
    <fullName>SupplierProduct__c</fullName>
    <label>Supplier Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Supplies</valueSetName>
    </valueSet>
</CustomField>