force-app/main/default/objects/Account/recordTypes/Supplier_Account.recordType-meta.xml
<RecordType>
    <fullName>Supplier_Account</fullName>
    <active>true</active>
    <label>Supplier Account</label>
</RecordType>