force-app/main/default/objects/Account/validationRules/Check_Supplier_Shipping_City.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Supplier_Shipping_City</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Supplier Account&quot;,
ISBLANK(ShippingCity)
)</errorConditionFormula>
    <errorDisplayField>ShippingCity</errorDisplayField>
    <errorMessage>Must enter a city</errorMessage>
</ValidationRule>