force-app/main/default/objects/Account/validationRules/Check_Supplier_Shipping_State.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Supplier_Shipping_State</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Supplier Account&quot;,
AND (
OR(ShippingCountry = &quot;US&quot;, ShippingCountry=&quot;USA&quot;, ISBLANK(ShippingCountry)),
OR(
LEN(ShippingState) &lt; 2,
NOT(
CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp;
&quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot; &amp;
&quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:&quot; &amp;
&quot;WA:WV:WI:WY&quot;, ShippingState)
))))</errorConditionFormula>
    <errorDisplayField>ShippingState</errorDisplayField>
    <errorMessage>A valid two-letter state abbreviation is required.</errorMessage>
</ValidationRule>