force-app/main/default/objects/Account/validationRules/Check_Supplier_Shipping_Street.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Supplier_Shipping_Street</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Supplier Account&quot;,
ISBLANK(ShippingStreet)
)</errorConditionFormula>
    <errorDisplayField>ShippingStreet</errorDisplayField>
    <errorMessage>Must enter a shipping street</errorMessage>
</ValidationRule>