force-app/main/default/objects/Account/validationRules/Check_Supplier_Shipping_Zip.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Supplier_Shipping_Zip</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Supplier Account&quot;,
AND(
 OR(ShippingCountry = &quot;USA&quot;, ISBLANK(ShippingCountry)),
  OR(
   AND(LEN(ShippingPostalCode) &lt;&gt;5, 
      LEN(ShippingPostalCode) &lt;&gt; 10),
   NOT(CONTAINS(&quot;0123456789&quot;, 
      LEFT( ShippingPostalCode, 1))),
   NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( ShippingPostalCode , 2, 1))),
   NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( ShippingPostalCode , 3, 1))),
   NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( ShippingPostalCode , 4, 1))),
   NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( ShippingPostalCode , 5, 1))),
   AND(
    LEN(ShippingPostalCode) = 10,
   OR(
    MID( ShippingPostalCode , 6, 1) &lt;&gt; &quot;-&quot;,
    NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( ShippingPostalCode , 7, 1))),
    NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( ShippingPostalCode , 8, 1))),
    NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( ShippingPostalCode , 9, 1))),
    NOT(CONTAINS(&quot;0123456789&quot;, 
      MID( ShippingPostalCode , 10, 1)))
   )
  )
 )
)
)</errorConditionFormula>
    <errorDisplayField>ShippingPostalCode</errorDisplayField>
    <errorMessage>Zip code must be in 00000 or 00000-0000 format</errorMessage>
</ValidationRule>