force-app/main/default/objects/Account/validationRules/Test.validationRule-meta.xml
<ValidationRule>
    <fullName>Test</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$RecordType.Name = &quot;Supplier Account&quot;,
ISBLANK(ShippingCountry)
)</errorConditionFormula>
    <errorDisplayField>ShippingCountry</errorDisplayField>
    <errorMessage>Invalid shipping country</errorMessage>
</ValidationRule>