force-app/main/default/objects/Account/listViews/Customer_Accounts.listView-meta.xml
<ListView>
    <fullName>Customer_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Customer_Account</value>
    </filters>
    <label>Customer Accounts</label>
    <sharedTo>
        <group>List_Views</group>
    </sharedTo>
</ListView>