force-app/main/default/objects/Account/listViews/SupplierAccounts.listView-meta.xml
<ListView>
    <fullName>SupplierAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Supplier_Account</value>
    </filters>
    <label>Supplier Accounts</label>
    <sharedTo>
        <group>List_Views</group>
    </sharedTo>
</ListView>